# pmem_bench

./: CMakeLists.txt  README.md  exec.sh  exec_centos.sh  exec_ubuntu.sh  main.cpp  spin_barrier.cpp  spin_barrier.h
data/2021-12-27T20:45:49+09:00/: clflush_avx512f_0_0.data  clflush_avx512f_0_1.data  clflush_avx512f_0_2.data  clflush_avx512f_1_0.data  clflush_avx512f_1_1.data  clflush_avx512f_1_2.data  clflush_avx_0_0.data  clflush_avx_0_1.data  clflush_avx_0_2.data  clflush_avx_1_0.data  clflush_avx_1_1.data  clflush_avx_1_2.data  clflush_genericmemmove_0_0.data  clflush_genericmemmove_0_1.data  clflush_genericmemmove_0_2.data  clflush_genericmemmove_1_0.data  clflush_genericmemmove_1_1.data  clflush_genericmemmove_1_2.data  clflush_libcmemmove_0_0.data  clflush_libcmemmove_0_1.data  clflush_libcmemmove_0_2.data  clflush_libcmemmove_1_0.data  clflush_libcmemmove_1_1.data  clflush_libcmemmove_1_2.data  clflush_sse2_0_0.data  clflush_sse2_0_1.data  clflush_sse2_0_2.data  clflush_sse2_1_0.data  clflush_sse2_1_1.data  clflush_sse2_1_2.data  clflushopt_avx512f_0_0.data  clflushopt_avx512f_0_1.data  clflushopt_avx512f_0_2.data  clflushopt_avx512f_1_0.data  clflushopt_avx512f_1_1.data  clflushopt_avx512f_1_2.data  clflushopt_avx_0_0.data  clflushopt_avx_0_1.data  clflushopt_avx_0_2.data  clflushopt_avx_1_0.data  (+50 more)
data/2022-01-05T22:46:30+09:00/: chris90_clflush_avx.data  chris90_clflush_avx.data_random_fdwrite.eps  chris90_clflush_avx.data_random_normalwrite.eps  chris90_clflush_avx.data_random_read.eps  chris90_clflush_avx512f.data  (+101 more)
graph_script/: generate_graph.py
(+349 files in other folders)
